# soroban-dapps-challenge

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  hello.sh  incr.sh  index.html  initialize.sh  output.txt  package-lock.json  package.json  tsconfig.json  validate-challenge.cjs  validate-challenge.js  vercel.json
.cargo/: config.toml
.github/workflows/: challenges-validation.yml  crowdfund-validation.yml  crypto-oracle-validation.yml  nft-gallery-validation.yml  nodejs.yml  rust.yml  update-completed-sprint-on-issue-closed.yml
assets/icons/: index.tsx
challenge/: output.txt
components/atoms/: index.tsx
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
cron/: cron-script.js  cron-script.ts  cron-script2.ts  package-lock.json  package.json  tsconfig.json
crowdfund/: initialize.sh  package-lock.json  package.json  validate-challenge.js
crowdfund/challenge/: output.txt
crowdfund/context/: appContext.tsx
crowdfund/hooks/: useAccount.ts
crowdfund/pages/: index.tsx
crypto-oracle/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  validate-challenge.js
crypto-oracle/.cargo/: config.toml
crypto-oracle/cron/: package.json
crypto-oracle/src/: main.tsx
docker/: build.sh
erc721-example/: Cargo.toml
erc721/src/: tests.rs
frontend/: .gitignore  package-lock.json  package.json
hello-world/: Cargo.toml
hello-world/src/: test.rs
hooks/: index.ts  useAccount.ts  useIsMounted.ts
liquidity-pool/: .gitignore  initialize.sh
liquidity-pool/.cargo/: config.toml
liquidity-pool/frontend/: .gitignore  package-lock.json  package.json
mlh-contract/: deploy.sh
mlh-contract/src/: test.rs  types.rs
mlh-frontend/: contract.id  deploy-prod.sh
mlh-frontend/src/: keyStore.ts
nft-gallery/: Cargo.toml  validate-challenge.js
nft-gallery/erc721/: Cargo.toml  README.md
nft-gallery/erc721-example/src/: lib.rs
nft-gallery/erc721/src/: lib.rs  types.rs
nft-gallery/erc721/src/erc721traits/: burnable.rs  enumerable.rs  erc721.rs  metadata.rs  mod.rs
nft-gallery/mlh-contract/: Cargo.toml  Makefile  init.sh  standalone.sh
nft-gallery/mlh-contract/src/: lib.rs  types.rs
nft-gallery/mlh-frontend/: astro.config.mjs  deploy.sh  init.sh  package-lock.json  package.json
nft-gallery/mlh-frontend/src/components/: Header.astro  Mint.astro
nft-gallery/mlh-frontend/src/pages/: supply.ts
nft-gallery/mlh-frontend/src/pages/test/: [id].astro  [id].json.ts
nft-gallery/mlh-marketplace/: Cargo.toml
nft-gallery/mlh-marketplace/src/: lib.rs
nft-gallery/storage/: Cargo.toml
nft-gallery/storage/src/: lib.rs
pages/: index.tsx
shared/: config.json  contracts.ts
src/components/: AppRoutes.tsx  Layout.tsx  OracleForm.tsx  Wallet.tsx
src/context/: appContext.tsx
src/hooks/: useAccount.ts  useIsMounted.ts  (+1 more)
styles/: Home.module.css  globals.css
vault/: README.md  initialize.sh
(+93 files in other folders)
