[package]
name = "mlh-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = [] }
erc721 = { workspace = true, default-features = false, features = ["metadata"] }
storage = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


[features]
default = ["init", "prod"]
init = []
prod = []
