[package]
name = "mlh-marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = [] }
erc721 = { workspace = true, default-features = false, features = ["metadata"] }
storage = { workspace = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-strkey = { version = "0.0.7" }
